<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scv_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F6F1F1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_margin">

            <ImageView
                android:id="@+id/img_hulk_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hulk_hero"
                android:paddingTop="@dimen/smaill_padding"
                android:src="@drawable/inclieble_hulk" />

            <TextView
                android:id="@+id/txt_name_hero"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_hero"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_description_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_hero"
                android:textAlignment="center" />

            <HorizontalScrollView
                android:id="@+id/scv_scroll_hor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img_endgame_image"
                            style="@style/img_margin"
                            android:contentDescription="@string/avengers_endgame"
                            android:src="@drawable/avengers_endgame" />

                        <TextView
                            android:id="@+id/txt_endgame_name"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_endgame_image"
                            android:fontFamily="@font/roboto"
                            android:text="@string/avengers_endgame"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txt_endgame_date"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_endgame_name"
                            android:fontFamily="@font/roboto"
                            android:text="@string/txt_date_endgame"
                            android:textAlignment="center" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img_infinity_image"
                            style="@style/img_margin"
                            android:contentDescription="@string/avengers_infinity_war"
                            android:src="@drawable/avengers_infinity_war" />

                        <TextView
                            android:id="@+id/txt_infinity_name"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_infinity_image"
                            android:fontFamily="@font/roboto"
                            android:text="@string/avengers_infinity_war"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txt_infinity_date"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_infinity_name"
                            android:fontFamily="@font/roboto"
                            android:text="@string/txt_date_infinity"
                            android:textAlignment="center" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img_ragnarok_image"
                            style="@style/img_margin"
                            android:contentDescription="@string/thor_ragnarok"
                            android:src="@drawable/thor_ragnarok" />

                        <TextView
                            android:id="@+id/txt_ragnarok_name"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_ragnarok_image"
                            android:fontFamily="@font/roboto"
                            android:text="@string/thor_ragnarok"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txt_ragnarok_date"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_ragnarok_name"
                            android:fontFamily="@font/roboto"
                            android:text="@string/txt_date_ragnarok"
                            android:textAlignment="center" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/img_ultron_image"
                            style="@style/img_margin"
                            android:contentDescription="@string/avengers_age_of_ultron"
                            android:src="@drawable/avengers_ultron" />

                        <TextView
                            android:id="@+id/txt_ultron_name"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_ultron_image"
                            android:fontFamily="@font/roboto"
                            android:text="@string/avengers_age_of_ultron"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txt_ultron_date"
                            style="@style/NameStyleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_ultron_name"
                            android:fontFamily="@font/roboto"
                            android:text="@string/txt_date_ultron"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/img_icon_hulk"
                android:layout_width="217dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:src="@drawable/icons_hulk"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_nickname_hero"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname_hero"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_test_hero"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_hero"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edt_nickname_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname_edit"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_validate_nickname"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#808285"
                android:text="@string/validate_nickname"
                android:textAlignment="center"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</layout>